--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  
 }
 
 .profile-image {
@@ -29,6 +33,11 @@ body {
   font-style: italic;
 }
 
+.links {
+display: flex;
+gap: 16px;
+}
+
 button {
   border: none;
   border-radius: 8px;
@@ -41,8 +50,18 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  
 }
 
 ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  
+}
+
+.left, .right {
+  display: flex;
+  gap: 16px;
+  align-items: center;
 }
