--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+
 }
 
 img {
@@ -23,4 +24,72 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+/* Solution */
+
+body {
+  display: flex;
+  flex-direction: column;
+
+
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.header  a,
+.footer  a {
+  margin: 0 10px;
+}
+
+.footer {
+  background-color: #eeeeee;
+}
+
+.left-links {
+  display: flex;
+  padding: 0;
+}
+
+.right-links {
+  display: flex;
+}
+
+.content {
+  align-self: center;
+}
+
+.input {
+  text-align: center;
+}
+
+.buttons {
+  text-align: center;
+}
+
+.buttons > button {
+  background-color: #eeeeee;
+  color: black;
+  border-radius: 6px;
+  padding: 5px;
+  margin-top: 10px;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(114, 114, 114);
+}
+
+.content > buttons {
+  display: flex;
+  justify-content: center;
 }
